# walkie

./: Cargo.toml  README.md  build.sh
.cargo/: cmake-wrap.sh  config.toml
src/: audio.rs  main.rs  transport.rs  tui.rs
