[package]
name = "walkie"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = { version = "0.33.0", default-features = false }
iroh-roq = { git = "https://github.com/n0-computer/iroh-roq.git", branch = "fix/close-flows" }
cpal = "0.15"
opus = "0.3"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
anyhow = "1.0"
dirs = "5"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.28"
ratatui = { version = "0.29", features = ["crossterm"] }
bytes = "1.5"
socket2 = { version = "0.5", features = ["all"] }
